# pdf-fill-studio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  profile.example.json  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
editor/: coords.test.mjs  editor.js  index.html
pdf_fill_studio/: acroform.py  bake_overlay.py  build_job.py  cli.py  coords.py  detect_type.py  guess_positions.py  mcp_server.py  profile.py  render_page.py  serve_editor.py  xfa.py
pdf_fill_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pdf_fill_studio/editor/: coords.js  index.html
skills/pdf-fill-studio/: SKILL.md
tests/: make_acroform_fixture.py  make_comb_fixture.py  make_fixture.py  make_xfa_fixture.py  test_acroform_cli.py  test_acroform_extract.py  test_acroform_fill.py  test_acroform_fixture.py  test_bake_overlay.py  test_build_job.py  test_comb.py  test_coords.py  test_detect_type.py  test_fixture.py  test_guess_positions.py  test_mcp.py  test_placement.py  test_profile.py  test_render.py  test_serve_editor.py  test_smoke.py  test_xfa_cli.py  test_xfa_extract.py  test_xfa_fill.py  test_xfa_fixture.py  test_xfa_single_stream.py
